MathLibrary 만드는 중, 쿼터니언
쿼터니언 만드는 중 ..

--- a/DUOLMath/DUOLMath.vcxproj.filters
+++ b/DUOLMath/DUOLMath.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="include\DUOLMath\Vector4.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLMath\Constants.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DUOLMath\Float4X4.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLMath\Matrix.cpp">
