--- a/DUOLMath/DUOLMath.vcxproj
+++ b/DUOLMath/DUOLMath.vcxproj
@@ -19,9 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLMath\Constants.h" />
     <ClInclude Include="include\DUOLMath\Float2.h" />
     <ClInclude Include="include\DUOLMath\Float3.h" />
     <ClInclude Include="include\DUOLMath\Float4.h" />
+    <ClInclude Include="include\DUOLMath\Float4X4.h" />
     <ClInclude Include="include\DUOLMath\Matrix.h" />
     <ClInclude Include="include\DUOLMath\Quaternion.h" />
     <ClInclude Include="include\DUOLMath\Vector2.h" />
