--- a/DUOLGraphicsLibrary_Direct3D11/DUOLGraphicsLibrary_Direct3D11.vcxproj
+++ b/DUOLGraphicsLibrary_Direct3D11/DUOLGraphicsLibrary_Direct3D11.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{3fe2fed2-72a2-40f5-9907-a170abf495e1}</ProjectGuid>
-    <RootNamespace>DUOLGraphicsLibrary</RootNamespace>
+    <ProjectGuid>{c1e16a62-c192-484a-964a-b4c87755cc1b}</ProjectGuid>
+    <RootNamespace>DUOLGraphicsLibraryDirect3D11</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -71,13 +71,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)build\$(Platform)\$(Configuration)\</OutDir>
+    <IncludePath>$(SolutionDir)DUOLGraphicsLibrary\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;DUOLGRAPHICSLIBRARY_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;DUOLGRAPHICSLIBRARYDIRECT3D11_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -94,7 +94,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;DUOLGRAPHICSLIBRARY_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;DUOLGRAPHICSLIBRARYDIRECT3D11_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -111,16 +111,16 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;DUOLGRAPHICSLIBRARY_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;DUOLGRAPHICSLIBRARYDIRECT3D11_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)Include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>$(SolutionDir)build\$(Platform)\$(Configuration)\DUOLGraphicsLibrary.lib;d3d11.lib;dxgi.lib;D3DCompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -129,7 +129,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;DUOLGRAPHICSLIBRARY_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;DUOLGRAPHICSLIBRARYDIRECT3D11_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -143,43 +143,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="CommandBuffer.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\BufferArray.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\Buffer.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\EntityBase.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\EntityID.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Export.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\RenderTargetFlags.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\SamplerFlags.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Resource_Format.h" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\Renderer.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\ShaderFlags.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\TextureFlags.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\ResourceFlags.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\Resource.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\RenderTarget.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\Sampler.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\Shader.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\Texture.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\RendererFlags.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\RenderContext.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\BufferFlags.h" />
-    <ClInclude Include="include\DUOLGraphicsLibrary\PipelineStateFlags.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CommandBuffer.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\BufferArray.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\RenderContext.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\Buffer.cpp" />
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\RenderTarget.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\Sampler.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\Shader.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\EntityBase.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\Resource.cpp" />
-    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\Texture.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
